tests/miniJava/neg/004056_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class class java { } { }
